[package]
name = "http3"
version = "0.1.0"
edition = "2024"

[dependencies]
h3 = { version = "*" }
h3-quinn = { version = "0.0.10", features = ["tracing", "datagram"] }
h3-webtransport = "*"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23.27", features = ["ring", "std"]}
rustls-native-certs = "*"
ring = "0.17.14"
quinn = { version = "0.11.8", features = ["runtime-tokio", "rustls", "ring"] }
h3-datagram = "*"
rcgen = { version = "0.13" }
bytes = "1.10.1"
http = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
